force-app/main/default/objects/Organization_Department__c/Organization_Department__c.object-meta.xml
<CustomObject>
    <label>Department</label>
    <nameField>
        <displayFormat>Dpt-{00000}</displayFormat>
        <label>Department ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Departments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>