force-app/main/default/objects/Organization_Department__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <formula>Location__r.Address__City__s</formula>
    <label>City</label>
    <type>Text</type>
</CustomField>