force-app/main/default/objects/Organization_Department__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <formula>TEXT(Location__r.Address__CountryCode__s )</formula>
    <label>Country</label>
    <type>Text</type>
</CustomField>