force-app/main/default/objects/Organization_Department__c/fields/Dept_ID__c.field-meta.xml
<CustomField>
    <fullName>Dept_ID__c</fullName>
    <label>Master Department ID</label>
    <referenceTo>Organization_Department_Mgr__c</referenceTo>
    <relationshipLabel>Departments</relationshipLabel>
    <relationshipName>Departments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>