force-app/main/default/objects/Organization_Department__c/fields/Dept_ID_Data__c.field-meta.xml
<CustomField>
    <fullName>Dept_ID_Data__c</fullName>
    <formula>Dept_ID__r.Dept_ID__c</formula>
    <label>Dept ID</label>
    <type>Text</type>
</CustomField>