force-app/main/default/objects/Organization_Department__c/fields/MGR_LVL_2_DESCR__c.field-meta.xml
<CustomField>
    <fullName>MGR_LVL_2_DESCR__c</fullName>
    <formula>Text( Dept_ID__r.MGR_LVL_2_DESCR__c )</formula>
    <label>MGR LVL 2 DESCR</label>
    <type>Text</type>
</CustomField>