force-app/main/default/objects/Organization_Department__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <formula>TEXT(Location__r.Address__StateCode__s )</formula>
    <label>State</label>
    <type>Text</type>
</CustomField>